--- a/Intro_NB.ipynb
+++ b/Intro_NB.ipynb
@@ -145,7 +145,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hay otra forma de importar las funciones de las librerías **PSSPY**, mediante un archivo compilado (*lib_psse.pyc*) el cual fue creado por Omar Miguel Sánchez, contiene todas las funciones con las que opera el **PSS/E** y \"configura\" nuestro ambiente de trabajo para empezar a trabajar directamente con **PSS/E**, la única condición es que el archivo se encuentre en la misma ruta donde se ejecutará el módulo de _Python_ o bien, el Note Book de Jupyter. Para mandar llamar esta librería solo hay que ejecutar el siguiente comando:"
+    "Hay otra forma de importar las funciones de las librerías **PSSPY**, mediante un archivo compilado (*lib_psse.pyc*) el cual fue creado por **Omar Miguel Sánchez**, el archivo contiene todas las funciones con las que opera el **PSS/E** y \"configura\" nuestro ambiente de trabajo para empezar a trabajar directamente con **PSS/E**, la única condición que requiere es que el archivo se encuentre en la misma ruta donde se ejecutará el módulo de _Python_ o el Note Book de Jupyter. \n",
+    "\n",
+    "Para mandar llamar esta librería solo hay que ejecutar el siguiente comando:"
    ]
   },
   {
