Corrección de ortografía

--- a/Intro_NB.ipynb
+++ b/Intro_NB.ipynb
@@ -70,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importando las librerías\n",
+    "### Importando las librerías requeridas\n",
     "\n",
     "En la siguiente celda se realiza el primer ejercicio de ejecución de código, en el cual se importan a nuestro ambiente de ejecución las librerías: _os, sys, pss34, psspy y redirec_. Además se definen las rutas de las carpetas queindican en donde se encuentran: la carpeta con la librería **PSSPY** y el ejecutable de **PSS/E 34**.\n",
     "\n",
@@ -88,7 +88,7 @@
      "text": [
       "\n",
       " Input error detected at !\n",
-      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9003 --control=9001 --hb=9000 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"9f4e5850-b5e4-402e-b573-652d768bceb8\\\"\" --shell=9002 \"--transport=\\\"tcp\\\"\" --iopu\n",
+      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9003 --control=9001 --hb=9000 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"a5dc70a9-0a46-47c3-acd8-abb9ce8ef18a\\\"\" --shell=9002 \"--transport=\\\"tcp\\\"\" --iopu\n",
       "                                                                                                          !\n",
       "\n",
       " PSS(R)E Version 34\n",
@@ -107,7 +107,7 @@
       "\n",
       "      50000 BUS POWER SYSTEM SIMULATOR--PSS(R)E-34.6.0\n",
       "\n",
-      "             INITIATED ON THU, APR 28 2022  10:43\n"
+      "             INITIATED ON MON, MAY 02 2022  16:41\n"
      ]
     },
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,70 +219,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "     PTI INTERACTIVE POWER SYSTEM SIMULATOR--PSS(R)E     THU, APR 28 2022  13:24\n",
-      "                                                                  SYSTEM SUMMARY\n",
-      "\n",
-      "\n",
-      " ---------------------BUSES----------------------        -----GENERATION----- ----SHUNTS----- -IND MACHS- FACTS   GNE\n",
-      "  TOTAL  PQ<>0.  PQ=0.  PE/E   PE/Q  SWING  OTHER  LOADS PLANTS MACHNS   WIND  FIXED SWITCHED GENS MOTORS  DEVS  DEVS\n",
-      "  10605   3679   5520    618    299      2    487   4407   1297   1420    432   1665     97      0      0    11     0\n",
-      " ------------------AC BRANCHES------------------- 3WIND MULTI-SECTION ---DC LINES--                    AREA X------- SWING BUSES -------X\n",
-      "  TOTAL    RXB     RX    RXT   RX=0.    IN    OUT XFORM  LINES SECTNS 2TRM MTRM VSC AREAS ZONES OWNRS TRANS  20025     MMT-03-HI   17.000\n",
-      "  12692   5593    132   6740    227  12025    667   728      0      0    3    0   0    11    40   188     0  20027     MMT-05-HI   17.000\n",
-      "      ----GENERATION---- INDUCTION                                       GNE\n",
-      " TOTAL   SYNCHR  INDUCTN   MOTORS   PQLOAD   I LOAD   Y LOAD   SHUNTS  DEVICES CHARGING   LOSSES    SWING\n",
-      " MW     54503.1      0.0      0.0  52890.2      0.0      0.0      5.2      0.0      0.0   1607.8    361.8\n",
-      " MVAR    3112.7      0.0      0.0  14583.0      0.0      0.0  -2234.3      0.0  31263.3  22027.3    -48.0\n",
-      "\n",
-      " TOTAL MISMATCH =    0.32 MVA X--------- AT BUS ----------X   THRSHZ  PQBRAK BLOWUP  SBASE MXTPSS\n",
-      "  MAX. MISMATCH =    0.06 MVA 330901     POS-CEV     16.600  0.000100  0.700   5.00 100.00   99\n",
-      "   HIGH VOLTAGE = 1.13026 PU   41999     SER-ST      53.000   ADJTHR  ACCTAP TAPLIM SWVBND MXSWIM\n",
-      "   LOW  VOLTAGE = 0.83686 PU  308132     TUX-23B     23.000   0.0050  1.0000 0.0500  100.0   10\n",
-      "\n",
-      " X------ SOLV AND MSLV ------X  X----------------- NEWTON ------------------X  X----- TYSL -----X\n",
-      "  ACCP  ACCQ  ACCM   TOL  ITER  ACCN  TOLN  VCTOLQ  VCTOLV ITER  DVLIM NDVFCT  ACCTY    TOL  ITER\n",
-      " 1.600 1.600 1.000 0.00010 100  1.00 0.1000 0.1000 0.000010 200 0.9900 0.9900  1.000 0.000010  20\n",
-      "     PTI INTERACTIVE POWER SYSTEM SIMULATOR--PSS(R)E     THU, APR 28 2022  13:24\n",
-      "                                                                         WORST\n",
-      "                                                                      MISMATCHES\n",
-      "   BUS#-SCT X-- NAME --X BASKV       MW       MVAR       MVA\n",
-      " 330901     POS-CEV     16.600      0.00      0.06      0.06\n",
-      " 330900     POS-F1      230.00     -0.00     -0.06      0.06\n",
-      " 322769     PMY-ST1     53.000     -0.00      0.05      0.05\n",
-      "  32276     PMY-400     400.00     -0.00     -0.05      0.05\n",
-      "  32099     KDA-CEV1    17.500      0.00      0.02      0.02\n",
-      "  32089     KDA-F1      400.00     -0.00     -0.02      0.02\n",
-      " 341700     QRP-F1      230.00     -0.00     -0.02      0.02\n",
-      " 341701     QRP-CEV     16.600     -0.00      0.02      0.02\n",
-      "  32103     SAN-115     115.00     -0.00     -0.01      0.01\n",
-      "     PTI INTERACTIVE POWER SYSTEM SIMULATOR--PSS(R)E     THU, APR 28 2022  13:24\n",
-      "                                                                      RATING SET\n",
-      "                                                                     UTILIZATION\n",
-      " RATING SET  -NAME-  X---------DESCRIPTION----------X  # NON-ZERO RATINGS\n",
-      "      1      RATE1   RATING SET 1                             12190\n",
-      "      2      RATE2   RATING SET 2                               930\n",
-      "      3      RATE3   RATING SET 3                               854\n",
-      "      4      RATE4   RATING SET 4                                 5\n",
-      "      5      RATE5   RATING SET 5                                 6\n",
-      "      6      RATE6   RATING SET 6                                 5\n",
-      "      7      RATE7   RATING SET 7                                 5\n",
-      "      8      RATE8   RATING SET 8                                 5\n",
-      "      9      RATE9   RATING SET 9                                 5\n",
-      "     10      RATE10  RATING SET 10                                5\n",
-      "     11      RATE11  RATING SET 11                                5\n",
-      "     12      RATE12  RATING SET 12                                5\n",
-      "\n",
-      " Output completed\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sección 1.139 de la Docuementación\n",
     "\n",
@@ -300,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +248,7 @@
        "0"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +256,7 @@
    "source": [
     "# Subsistema identificado con el número \"1\" que comprende a todas las subestaciones del área \"5\"\n",
     "\n",
-    "ierr = psspy.asys(0, 1, [5])\n",
+    "ierr = psspy.asys(1, 1, [5])\n",
     "ierr"
    ]
   },
@@ -334,14 +273,25 @@
    "source": [
     "### 4. Extracción de valores para manipulación\n",
     "\n",
-    "Para este ejercicio se \"pide\" al programa **PSS/E** nos devuelva el total de demanda de un grupo de subestaciones en el caso. Las extracciones de información del caso se encuentran en el **capítulo 8** de la docuemntación."
+    "Para este ejercicio se \"pide\" al programa **PSS/E** nos devuelva el total de demanda de un grupo de subestaciones en el caso. Las extracciones de información del caso se encuentran en el **capítulo 8** de la documentación (8.23.3)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[(5803.85888671875+1338.0889892578125j)]]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Devuelve la carga total (en MW y MVAr) de los nodos en servicio con cargas en servicio del subsistema \"1\"\n",
     "\n",
