--- a/Intro_NB.ipynb
+++ b/Intro_NB.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +88,7 @@
      "text": [
       "\n",
       " Input error detected at !\n",
-      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9003 --control=9001 --hb=9000 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"390aeb48-415c-4793-b66d-8b511cb6d617\\\"\" --shell=9002 \"--transport=\\\"tcp\\\"\" --iopu\n",
+      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9003 --control=9001 --hb=9000 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"88cd474d-53e7-415d-b379-7161745d21c6\\\"\" --shell=9002 \"--transport=\\\"tcp\\\"\" --iopu\n",
       "                                                                                                          !\n",
       "\n",
       " PSS(R)E Version 34\n",
@@ -107,7 +107,7 @@
       "\n",
       "      50000 BUS POWER SYSTEM SIMULATOR--PSS(R)E-34.6.0\n",
       "\n",
-      "             INITIATED ON WED, MAY 04 2022   8:05\n"
+      "             INITIATED ON WED, MAY 04 2022  13:10\n"
      ]
     },
     {
@@ -116,7 +116,7 @@
        "0"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,14 +244,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     PTI INTERACTIVE POWER SYSTEM SIMULATOR--PSS(R)E     WED, MAY 04 2022   8:05\n",
+      "     PTI INTERACTIVE POWER SYSTEM SIMULATOR--PSS(R)E     WED, MAY 04 2022  13:10\n",
       "                                                                  SYSTEM SUMMARY\n",
       "\n",
       "\n",
@@ -274,7 +274,7 @@
       " X------ SOLV AND MSLV ------X  X----------------- NEWTON ------------------X  X----- TYSL -----X\n",
       "  ACCP  ACCQ  ACCM   TOL  ITER  ACCN  TOLN  VCTOLQ  VCTOLV ITER  DVLIM NDVFCT  ACCTY    TOL  ITER\n",
       " 1.600 1.600 1.000 0.00010 100  1.00 0.1000 0.1000 0.000010 200 0.9900 0.9900  1.000 0.000010  20\n",
-      "     PTI INTERACTIVE POWER SYSTEM SIMULATOR--PSS(R)E     WED, MAY 04 2022   8:05\n",
+      "     PTI INTERACTIVE POWER SYSTEM SIMULATOR--PSS(R)E     WED, MAY 04 2022  13:10\n",
       "                                                                         WORST\n",
       "                                                                      MISMATCHES\n",
       "   BUS#-SCT X-- NAME --X BASKV       MW       MVAR       MVA\n",
@@ -287,7 +287,7 @@
       " 341700     QRP-F1      230.00     -0.00     -0.02      0.02\n",
       " 341701     QRP-CEV     16.600     -0.00      0.02      0.02\n",
       "  32103     SAN-115     115.00     -0.00     -0.01      0.01\n",
-      "     PTI INTERACTIVE POWER SYSTEM SIMULATOR--PSS(R)E     WED, MAY 04 2022   8:05\n",
+      "     PTI INTERACTIVE POWER SYSTEM SIMULATOR--PSS(R)E     WED, MAY 04 2022  13:10\n",
       "                                                                      RATING SET\n",
       "                                                                     UTILIZATION\n",
       " RATING SET  -NAME-  X---------DESCRIPTION----------X  # NON-ZERO RATINGS\n",
@@ -313,7 +313,7 @@
        "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -383,7 +383,7 @@
        "[[(5803.85888671875+1338.0889892578125j)]]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +535,7 @@
        "2       6  11408.402344  3745.507080  12007.517117  0.950105"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +671,7 @@
        "2     6  11408.402344  3745.507080  12007.517117  0.950105"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -902,7 +902,7 @@
        "2     6  11408.402344  3745.507080  12007.517117  0.950105"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1017,7 +1017,7 @@
        "2     6  11408.402344  3745.507080  12007.517117  0.950105"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1035,84 +1035,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Area</th>\n",
-       "      <th>MW</th>\n",
-       "      <th>MVAr</th>\n",
-       "      <th>MVA</th>\n",
-       "      <th>FP</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>3</td>\n",
-       "      <td>11784.241211</td>\n",
-       "      <td>3866.675049</td>\n",
-       "      <td>12402.399641</td>\n",
-       "      <td>0.950158</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>5</td>\n",
-       "      <td>5803.858887</td>\n",
-       "      <td>1338.088989</td>\n",
-       "      <td>5956.111157</td>\n",
-       "      <td>0.974438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>6</td>\n",
-       "      <td>11408.402344</td>\n",
-       "      <td>3745.507080</td>\n",
-       "      <td>12007.517117</td>\n",
-       "      <td>0.950105</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Area            MW         MVAr           MVA        FP\n",
-       "0     3  11784.241211  3866.675049  12402.399641  0.950158\n",
-       "1     5   5803.858887  1338.088989   5956.111157  0.974438\n",
-       "2     6  11408.402344  3745.507080  12007.517117  0.950105"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1123,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1135,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1174,7 +1096,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1236,6 +1158,37 @@
     "> Realiza una función que extraiga el flujo de potencia de todas las líneas en cierto nivel de voltaje\n",
     "\n",
     "> Haz algunas gráficas interesantes en las que pueadas visualizar la información que se obtiene de los dos anteriores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1-Area': [3, 5, 6],\n",
+       " '2-MW': [11784.2412109375, 5803.85888671875, 11408.40234375],\n",
+       " '3-MVAr': [3866.675048828125, 1338.0889892578125, 3745.507080078125],\n",
+       " '4-MVA': [12402.39964082708, 5956.111157468201, 12007.517117364267],\n",
+       " '5-FP': [0.950158159082805, 0.9744376377934878, 0.9501050243977686]}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = {\n",
+    "    '1-Area' : [3,5,6],\n",
+    "    '2-MW': [xarray3[0][0].real,xarray5[0][0].real,xarray6[0][0].real],\n",
+    "    '3-MVAr': [xarray3[0][0].imag,xarray5[0][0].imag,xarray6[0][0].imag],\n",
+    "    '4-MVA': [MVA3,MVA5,MVA6],\n",
+    "    '5-FP': [FP3,FP5,FP6],\n",
+    "}\n",
+    "results"
    ]
   }
  ],
