--- a/Estructuras de datos.ipynb
+++ b/Estructuras de datos.ipynb
@@ -69,6 +69,7 @@
     "> _Programa en Python/Fechas y horas en Python_ [_(página)_](https://www.programaenpython.com/fundamentos/fechas-y-horas-en-python/)\n",
     "\n",
     "> _W3 School/Python tutorial_ [_(página)_](https://www.w3schools.com/python/default.asp)\n",
+    "\n",
     "---"
    ]
   },
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -133,18 +134,25 @@
      "output_type": "stream",
      "text": [
       "x =  [1, 2, 'manzana', True, [3, 1]]\n",
-      "x[0] =  [3, 1]\n",
-      "x[1] =  True\n",
-      "x[2] =  manzana\n"
+      "x[1] =  2\n",
+      "x[2] =  manzana\n",
+      "x[3] =  True\n"
      ]
     }
    ],
    "source": [
     "x = crea_lista()\n",
     "print(\"x = \", x)\n",
-    "print(\"x[0] = \", x[-1])\n",
-    "print(\"x[1] = \", x[-2])\n",
-    "print(\"x[2] = \", x[-3])"
+    "print(\"x[1] = \", x[1])\n",
+    "print(\"x[2] = \", x[2])\n",
+    "print(\"x[3] = \", x[3])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> **Nota:** Los índices empiezan con el número cero (0), de forma que el índice número 1 se refiere al segundo elemento de la lista"
    ]
   },
   {
@@ -156,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +299,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17024/2034481068.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;31m# sort()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"x.sort() = \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23184/2034481068.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m \u001b[1;31m# sort()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m \u001b[0mx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     32\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"x.sort() = \"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'list'"
      ]
     }
@@ -332,8 +340,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--- \n",
+    "> **Ejercicio:** Explicar por qué se presenta el error en la instrucción de arriba y corregirlo.\n",
+    "\n",
+    "Pista: Listas Anidada\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -356,12 +376,12 @@
    "source": [
     "### **Otras operaciones con listas**\n",
     "\n",
-    "* **(_*_)** Multiplicar elementos de la lista.  \n"
+    "* **(_*_)** Multiplicar elementos de la lista.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -381,12 +401,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ Concatena listas "
+    "+ **(_+_)** Concatena listas "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -407,12 +427,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ Obtener partes de una lista. Para ello se especifican los índices de la porción que queremos. "
+    "+ Obtener partes o porciones de una lista (_slices_). Para ello se especifican los índices de la porción que queremos. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -507,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -561,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
