--- a/Estructuras de datos.ipynb
+++ b/Estructuras de datos.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -212,8 +212,8 @@
     }
    ],
    "source": [
-    "for i in x:\n",
-    "    print (i) \n"
+    "for elemento in x:\n",
+    "    print (elemento) \n"
    ]
   },
   {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -247,10 +247,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ Métodos o funciones que tiene el objeto lista. \n",
+    "+ Métodos o funciones que tiene el **objeto lista**. \n",
     "Un método se puede ver como una función que el propio Python tiene integrada y nos devuelve un resultado al aplicarse al objeto. \n",
     "\n",
-    "> **Nota:** No todos los objetos tienen los mismos métodos o funciones propias.\n",
+    "> **Nota:** No todos los **objetos** tienen los mismos métodos o funciones propias.\n",
     "\n",
     "Para listas tenemos los siguientes métodos: \n",
     "\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -346,14 +346,14 @@
     "--- \n",
     "> **Ejercicio:** Explicar por qué se presenta el error en la instrucción de arriba y corregirlo.\n",
     "\n",
-    "Pista: Listas Anidada\n",
+    "**Pista:** Listas Anidadas\n",
     "\n",
     "---"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -432,23 +432,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 0, 1, 0, 1, 1, 2, 'manzana', True, [3, 1]]\n",
-      "La primer tercia: c[0:3] =  [0, 1, 0]\n",
-      "La segunda tercia: c[3:6] =  [1, 0, 1]\n"
+      "c =  [0, 1, 0, 1, 0, 1, 1, 2, 'manzana', True, [3, 1]]\n",
+      "La primer tercia de elementos de la lista es: c[0:3] =  [0, 1, 0]\n",
+      "La segunda tercia de elementos de la lista es: c[3:6] =  [1, 0, 1]\n"
      ]
     }
    ],
    "source": [
-    "print(c)\n",
-    "print(\"La primer tercia: c[0:3] = \", c[0:3])\n",
-    "print(\"La segunda tercia: c[3:6] = \", c[3:6])"
+    "print(\"c = \", c)\n",
+    "print(\"La primer tercia de elementos de la lista es: c[0:3] = \", c[0:3])\n",
+    "print(\"La segunda tercia de elementos de la lista es: c[3:6] = \", c[3:6])"
    ]
   },
   {
@@ -460,23 +460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 0, 1, 0, 1, 1, 2, 'manzana', True, [3, 1]]\n",
-      "Del inicio hasta la posición 5: c[ :5] =  [0, 1, 0, 1, 0]\n",
-      "De la posición 5 hasta el final: c[5:] =  [1, 1, 2, 'manzana', True, [3, 1]]\n"
+      "c =  [0, 1, 0, 1, 0, 1, 1, 2, 'manzana', True, [3, 1]]\n",
+      "Los elementos del inicio hasta la posición 5 son: c[ :5] =  [0, 1, 0, 1, 0]\n",
+      "Los elementos de la posición 5 hasta el final son: c[5: ] =  [1, 1, 2, 'manzana', True, [3, 1]]\n"
      ]
     }
    ],
    "source": [
-    "print(c)\n",
-    "print(\"Del inicio hasta la posición 5: c[ :5] = \", c[:5])\n",
-    "print(\"De la posición 5 hasta el final: c[5:] = \", c[5:])"
+    "print(\"c = \", c)\n",
+    "print(\"Los elementos del inicio hasta la posición 5 son: c[ :5] = \", c[:5])\n",
+    "print(\"Los elementos de la posición 5 hasta el final son: c[5: ] = \", c[5:])"
    ]
   },
   {
@@ -487,12 +487,12 @@
     "\n",
     "Por ejemplo: \n",
     "\n",
-    "[: : 1] recorre toda la lista desde el inicio hasta el final con un paso de 1 (es decir elemento a elemento)"
+    "[ : : 1 ] recorre toda la lista desde el inicio hasta el final con un paso de 1 (es decir elemento a elemento)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -522,12 +522,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si creamos una nueva variable \"d\" y la igualamos a nuestra lista \"c\", uno esperaría que se creara una copia de la lista \"c\" en la variable \"d\", sin embargo no es así."
+    "Si creamos una nueva variable \"c_new\" y la igualamos a nuestra lista \"c\", uno esperaría que se creara una copia de la lista \"c\" en la variable \"d\", sin embargo no es así."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -576,18 +576,19 @@
    "source": [
     "Si usamos esta forma de crear una lista nueva con los mismos elementos de una existente y hacemos alguna modificación a la lista (cualquiera de ellas) la otra también verá reflejados esos cambios.\n",
     "\n",
-    "Esto sucede porque al igualar las variables (listas) se apuntan a la misma lista que está en memoria, no se genera una lista nueva. Para hacer esta operación, de general efectivamente 2 listas, se utiliza el método **copy ()**: "
+    "Esto sucede porque al igualar los objetos listas se apuntan a una misma lista que está en memoria y no se genera una lista nueva. Para hacer esta operación, de generar efectivamente 2 listas, se utiliza el método **copy ( )**: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creamos una copia de la lista c y la almacenamos en c_new: c_new = c.copy() ->  [0, 1, 0, 1, 0, 1, 1, 2, 'manzana', True, [3, 1], False]\n",
       "Modificamos únicamente la lista c: c.append(54) =  [0, 1, 0, 1, 0, 1, 1, 2, 'manzana', True, [3, 1], False, 54]\n",
       "Vemos que no afectó a c_new: c_new =  [0, 1, 0, 1, 0, 1, 1, 2, 'manzana', True, [3, 1], False]\n"
      ]
@@ -595,6 +596,7 @@
    ],
    "source": [
     "c_new = c.copy()\n",
+    "print(\"Creamos una copia de la lista c y la almacenamos en c_new: c_new = c.copy() -> \", c)\n",
     "c.append(54)\n",
     "print(\"Modificamos únicamente la lista c: c.append(54) = \", c)\n",
     "print(\"Vemos que no afectó a c_new: c_new = \", c_new)"
@@ -625,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
