--- a/Estructuras de datos.ipynb
+++ b/Estructuras de datos.ipynb
@@ -88,8 +88,9 @@
     "\n",
     "+ Permite elementos duplicados \n",
     "+ Permite diferentes tipos de datos (enteros, bool, caracter, funciones, etc.) \n",
-    "+ Se puede tener una o más listas dentro de una lista \n",
-    "+ Formas de crear una lista \n",
+    "+ Se puede tener una o más listas dentro de una lista\n",
+    "\n",
+    "### **Creando una lista** \n",
     "\n",
     "Para crearlas se utilizan corchetes y dentro de los corchetes se ponen todos los elementos de la lista, separados por \"comas\". "
    ]
@@ -455,7 +456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si no se especifica índice de inicio empieza desde el primer elemento de la lista y si no se especifica indice final toma hasta el último elemento"
+    "Si no se especifica índice de inicio empieza desde el primer elemento de la lista y si no se especifica índice final toma hasta el último elemento"
    ]
   },
   {
@@ -522,7 +523,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Si creamos una nueva variable \"c_new\" y la igualamos a nuestra lista \"c\", uno esperaría que se creara una copia de la lista \"c\" en la variable \"d\", sin embargo no es así."
+    "Si creamos una nueva variable \"c_new\" y la igualamos a nuestra lista \"c\", uno esperaría que se creara una copia de la lista \"c\" en la variable \"c_new\", sin embargo no es así."
    ]
   },
   {
