--- a/Intro_NB.ipynb
+++ b/Intro_NB.ipynb
@@ -122,12 +122,6 @@
     }
    ],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "import psse34\n",
-    "import psspy\n",
-    "import redirect\n",
-    "\n",
     "#Damos de alta los directorios de psse,para correrlo sin abrirlo\n",
     "\n",
     "PSSPY_location = r'C:\\Program Files (x86)\\PTI\\PSSE34\\PSSPY27' #hay que cambiar la ruta dependianto si se usa psse34 o 35 tambien en base al python 2 o 3\n",
@@ -136,6 +130,12 @@
     "sys.path.append(PSSE_location)\n",
     "os.environ['PATH'] += ';' + PSSPY_location\n",
     "os.environ['PATH'] += ';' + PSSE_location\n",
+    "\n",
+    "import os\n",
+    "import sys\n",
+    "import psse34\n",
+    "import psspy\n",
+    "import redirect\n",
     "\n",
     "redirect.psse2py()\n",
     "psspy.psseinit(50000)"
@@ -1162,11 +1162,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "6c3d9491ffb4e8c5e5cf823b7ff7179d3b82dbc9d7cf31eabb7f563a18a63946"
-  },
   "kernelspec": {
-   "display_name": "Python 3.7.0 64-bit ('3.7.0')",
+   "display_name": "Python 3.9.13 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1180,9 +1177,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "version": "3.9.13"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "26144f71227b8c895032d41093ca1234c525aec6b0760de2e60002c28d973735"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
