Funciones para revisar PEMs

--- a/Revisar_PEMs.ipynb
+++ b/Revisar_PEMs.ipynb
@@ -14,7 +14,7 @@
       "        Example, for PSSE 35.0.x, use this as: psse35.set_minor(0)\n",
       "\n",
       " Input error detected at !\n",
-      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9036 --control=9034 --hb=9033 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"bb8199f7-f112-462a-bc7f-e9713d58f4c2\\\"\" --shell=9035 \"--transport=\\\"tcp\\\"\" --iopu\n",
+      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9008 --control=9006 --hb=9005 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"c4e5b421-6119-477f-8019-87a6c49d7eb8\\\"\" --shell=9007 \"--transport=\\\"tcp\\\"\" --iopu\n",
       "                                                                                                          !\n",
       "\n",
       " PSS(R)E Version 35\n",
@@ -33,7 +33,7 @@
       "\n",
       "      50000 BUS POWER SYSTEM SIMULATOR--PSS(R)E-35.3.3\n",
       "\n",
-      "             INITIATED ON WED, AUG 10 2022  17:27\n"
+      "             INITIATED ON THU, AUG 11 2022  13:34\n"
      ]
     },
     {
@@ -99,7 +99,7 @@
     "\n",
     "# Se define un subsistema que abarca todos los elementos las áreas 3,5 y 6\n",
     "#  \n",
-    "ierr = psspy.bsys(0,0,[0,400],3,[3,5,6],0,[],0,[],0,[])\n",
+    "ierr = psspy.bsys(0,0,[69,400],3,[3,5,6],0,[],0,[],0,[])\n",
     "#"
    ]
   },
@@ -112,18 +112,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "El Bus: 3307104 no existe\n",
+      "Bus: 330704 ok\n",
       "Bus: 330803 ok\n",
-      "Enlace: 33045-OC-33019 ok\n",
-      "Enlace: 33045-OC-33032 ok\n",
-      "Enlace: 33045-OC-33036 ok\n",
+      "Lista de ENLACES_IN vacía o con error: 0\n",
       "Enlace: 33032-73-33036 ok\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'PEM P16-OC2 revisado'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "P16_OC2()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shunt: 34043/PQN-115(OC) ok\n",
+      "Shunt: 34116/QRP-115(OC) ok\n",
+      "Shunt: 34140/CNI-115(OC) ok\n",
+      "Shunt: 34114/NTA-115(OC) ok\n",
+      "Hay un problema con el Shunt:  34160/CIM-115(OC)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'PEM P18-OC9 revisado'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P18_OC9()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
