Revision de PEMS final

--- a/Revisar_PEMs.ipynb
+++ b/Revisar_PEMs.ipynb
@@ -14,7 +14,7 @@
       "        Example, for PSSE 35.0.x, use this as: psse35.set_minor(0)\n",
       "\n",
       " Input error detected at !\n",
-      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9008 --control=9006 --hb=9005 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"c4e5b421-6119-477f-8019-87a6c49d7eb8\\\"\" --shell=9007 \"--transport=\\\"tcp\\\"\" --iopu\n",
+      " -m ipykernel_launcher --ip=127.0.0.1 --stdin=9008 --control=9006 --hb=9005 \"--Session.signature_scheme=\\\"hmac-sha256\\\"\" \"--Session.key=b\\\"d13032ab-8fc9-4c96-ac9b-b3a0b19262a0\\\"\" --shell=9007 \"--transport=\\\"tcp\\\"\" --iopu\n",
       "                                                                                                          !\n",
       "\n",
       " PSS(R)E Version 35\n",
@@ -33,7 +33,7 @@
       "\n",
       "      50000 BUS POWER SYSTEM SIMULATOR--PSS(R)E-35.3.3\n",
       "\n",
-      "             INITIATED ON THU, AUG 11 2022  13:34\n"
+      "             INITIATED ON FRI, AUG 12 2022  12:24\n"
      ]
     },
     {
@@ -112,10 +112,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "PEM P16-OC2\n",
       "Bus: 330704 ok\n",
-      "Bus: 330803 ok\n",
-      "Lista de ENLACES_IN vacía o con error: 0\n",
-      "Enlace: 33032-73-33036 ok\n"
+      "Enlace: 33045-OC-33019 ok\n",
+      "Enlace: 33045-OC-33032 ok\n",
+      "Enlace: 33045-OC-33036 ok\n",
+      "Enlace: 33032-73-33036 ok\n",
+      "-----------------------------\n"
      ]
     },
     {
@@ -135,18 +138,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "PEM P18-OC9\n",
       "Shunt: 34043/PQN-115(OC) ok\n",
       "Shunt: 34116/QRP-115(OC) ok\n",
       "Shunt: 34140/CNI-115(OC) ok\n",
       "Shunt: 34114/NTA-115(OC) ok\n",
-      "Hay un problema con el Shunt:  34160/CIM-115(OC)\n"
+      "Shunt: 34160/CIM-115(OC) ok\n",
+      "Shunt: 34112/QRO-115(OC) ok\n",
+      "-----------------------------\n"
      ]
     },
     {
@@ -155,7 +161,7 @@
        "'PEM P18-OC9 revisado'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,10 +172,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PEM P16-OC2\n",
+      "Bus: 330704 ok\n",
+      "Enlace: 33045-OC-33019 ok\n",
+      "Enlace: 33045-OC-33032 ok\n",
+      "Enlace: 33045-OC-33036 ok\n",
+      "Enlace: 33032-73-33036 ok\n",
+      "-----------------------------\n",
+      "PEM P18-OC9\n",
+      "Shunt: 34043/PQN-115(OC) ok\n",
+      "Shunt: 34116/QRP-115(OC) ok\n",
+      "Shunt: 34140/CNI-115(OC) ok\n",
+      "Shunt: 34114/NTA-115(OC) ok\n",
+      "Shunt: 34160/CIM-115(OC) ok\n",
+      "Shunt: 34112/QRO-115(OC) ok\n",
+      "-----------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "PEMS_2023 = [P16_OC2(),P18_OC9()]"
+   ]
   }
  ],
  "metadata": {
